--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,21 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- WG2 -->
+        <!-- https://mvnrepository.com/artifact/com.wgtwo.api/auth -->
+        <dependency>
+            <groupId>com.wgtwo.api</groupId>
+            <artifactId>auth</artifactId>
+            <version>0.0.3</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.wgtwo.api.v1.grpc/sms -->
+        <dependency>
+            <groupId>com.wgtwo.api.v1.grpc</groupId>
+            <artifactId>sms</artifactId>
+            <version>1.10.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -100,24 +115,25 @@
                 </executions>
             </plugin>
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.4.1</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
                         <goals>
-                            <goal>single</goal>
+                            <goal>shade</goal>
                         </goals>
                     </execution>
                 </executions>
                 <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                    <archive>
-                        <manifest>
+                    <transformers>
+                        <!-- https://github.com/grpc/grpc-java/issues/9387 -->
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                             <mainClass>com.wg2.storefront.MainKt</mainClass>
-                        </manifest>
-                    </archive>
+                        </transformer>
+                    </transformers>
                 </configuration>
             </plugin>
             <plugin>
@@ -128,7 +144,7 @@
                     <jdkVersion>17</jdkVersion>
                     <appName>wotel-store</appName>
                     <processTypes>
-                        <web>java -jar -Xmx400m ./target/storefront-example-jar-with-dependencies.jar</web>
+                        <web>java -jar -Xmx400m ./target/storefront-example-1.0.0-SNAPSHOT.jar</web>
                     </processTypes>
                 </configuration>
             </plugin>
