--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>sms</artifactId>
             <version>1.10.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.wgtwo.api.v0.grpc</groupId>
+            <artifactId>consents</artifactId>
+            <version>0.1.3</version>
+        </dependency>
 
     </dependencies>
 
